Mon Sep 29 14:32:18 2003  George Lebl <jirka@5z.com>

	* config/PreSession.in, config/PostSession.in, config/XKeepsCrashing,
	  config/Xsession.in:  Be more careful with shell stuff and quote
	  whatever we can, should fix rh #105858.

	* daemon/misc.c, config/XKeepsCrashing: Don't use gdialog as it's
	  nowdays just a wrapper on zenity

Fri Sep 26 13:38:55 2003  George Lebl <jirka@5z.com>

	* daemon/slave.c: in a further fit of anality, stat the file
	  even before handing it to the greeter and don't allow other
	  then regular files.

Fri Sep 26 10:44:18 2003  George Lebl <jirka@5z.com>

	* daemon/slave.c: to be even analer about filenames of user pics,
	  first run through realpath first.

Thu Sep 25 15:42:20 2003  George Lebl <jirka@5z.com>

	* Release 2.4.4.3

Thu Sep 25 15:38:38 2003  George Lebl <jirka@5z.com>

	* daemon/gdm.c, daemon/getvt.c: add a little color to the logout
	  message, correctly set the fonts here.  remove the stupid
	  /bin/clear hack and the /bin/chvt hack and replace it with
	  actual code.  Plus a teeny bit of cleanup

	* utils/gdmopen.c: some minor cleanup

	* configure.in: raise version

Thu Sep 25 11:23:24 2003  George Lebl <jirka@5z.com>

	* daemon/errorgui.c, daemon/slave.c: be even analer (is that 
	  a word?) about the setuid stuff here (it can't actually
	  fail, but just in case, we're being paranoid)  Also reset
	  the environment and desetuid for the setup program even
	  though that's not really needed.

Thu Sep 25 10:37:38 2003  George Lebl <jirka@5z.com>

	* daemon/auth.c, daemon/filecheck.[ch], daemon/gdm.[ch],
	  daemon/misc.c, daemon/slave.c:  Auditing the file handling
	  stuff, increase general paranoia and code anality about
	  these things plus check pretty much every return of the
	  sete[ug]id even though they are pretty much guaranteed
	  to exist.  Being paranoid here is good.  Allow the
	  authentication cookie be given in upper case hex for
	  the socket protocol.
