@@ -1,3 +1,10 @@
+Fri Oct 03 13:40:22 2003  George Lebl <jirka@5z.com>
+
+	* daemon/auth.c: when the ~/.Xauthority didn't exist
+	  and we tried to create it but failed due to root
+	  squashing, whack the file (we created as user, but
+	  can't access it as root).
+
 Mon Sep 29 14:32:18 2003  George Lebl <jirka@5z.com>
 
 	* config/PreSession.in, config/PostSession.in, config/XKeepsCrashing,
